# RP_IU3-63B_Gendel

backend/: pom.xml
backend/front/: package-lock.json  package.json
backend/front/src/: App.js
backend/front/src/components/: NavigationBar.jsx
backend/src/main/java/ru/hendel/backend/: BackendApplication.java
backend/src/main/java/ru/hendel/backend/auth/: AuthenticationFilter.java  AuthenticationProvider.java  SecurityConfiguration.java
backend/src/main/java/ru/hendel/backend/controllers/: ArtistController.java  CountryController.java  LoginController.java  MuseumController.java  SampleController.java  UserController.java
backend/src/main/java/ru/hendel/backend/domain/: Artist.java  Countries.java  Museum.java  Painting.java  User.java
backend/src/main/java/ru/hendel/backend/repos/: ArtistRepository.java  CountryRepository.java  MuseumRepository.java  UserRepository.java
backend/src/main/java/ru/hendel/backend/tools/: Utils.java
backend/src/main/resources/: application.properties
backend/src/test/java/ru/hendel/backend/: BackendApplicationTests.java
fclient/: settings.gradle
fclient/app/: build.gradle
fclient/app/src/androidTest/java/ru/hendel/fclient/: ExampleInstrumentedTest.java
fclient/app/src/main/: AndroidManifest.xml
fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/app/src/main/res/layout/: activity_pinpad.xml
fclient/app/src/main/res/values/: themes.xml
fclient/app/src/main/res/values-night/: themes.xml
fclient/gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
